robballen75-Salesforce/4-7-15/src/objects/DocXTools_Healthcheck_Snapshot__c.object
<CustomObject>
    <description>Custom object used to store snapshots of data and calculated scores that are used to generate the Healthcheck Score for DocXTools Accounts. The DocXTools Healthcheck Analytic Snapshot connects the DocXTools Healthcheck Snapshot report with this object.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>KP_Healthcheck_Snapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KP_HCScore__c</fullName>
        <label>DocXtools Healthcheck Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>case_doc_support_count__c</fullName>
        <label>Document Support Case Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>case_other_count__c</fullName>
        <label>Other Customer Support Case Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>doc_support_recency_scor__c</fullName>
        <label>Document Support Recency Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>doc_support_usage_score__c</fullName>
        <label>Document Support Usage Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>document_support_days_between_cases__c</fullName>
        <label>Document Support Days Between Cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>document_support_last_case__c</fullName>
        <label>Document Support Last Case</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>docxtools_deployed_groups_score__c</fullName>
        <label>DocXtools Deployed Groups Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>docxtools_deployment_status_score__c</fullName>
        <label>DocXtools Deployment Status Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>docxtools_grps_getting_high_value_score__c</fullName>
        <label>DocXtools Grps Getting High Value Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>docxtools_training_consult_hrs__c</fullName>
        <label>DocXtools Training/Consulting Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>docxtools_training_consult_score__c</fullName>
        <label>DocXtools Training/Consulting Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>docxtools_version_score__c</fullName>
        <label>DocXtools Version Deployed Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kp_open_enrollment_hrs__c</fullName>
        <label>DocXtools Open Enrollment Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>other_cust_support_recency_score__c</fullName>
        <label>Other Customer Support Recency Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>other_cust_support_usage_score__c</fullName>
        <label>Other Customer Support Usage Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>other_customer_support_last_case__c</fullName>
        <label>Other Customer Support Last Case</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>skills_assessment_deployed_score__c</fullName>
        <label>Skills Assessment Deployed Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>traffic_signal_deployed_score__c</fullName>
        <label>Traffic Signal Deployed Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>DocXTools Healthcheck Snapshot</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Account__c</columns>
        <columns>KP_HCScore__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>XTSnap-{000000}</displayFormat>
        <label>DocXToolsHealthcheck Snapshot ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DocXTools Healthcheck Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>